[gd_scene load_steps=2 format=3 uid="uid://5w8vqsdk5wng"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Piões de Batalha"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MainScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayButton" type="Button" parent="MainScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "JOGAR"

[node name="QuitButton" type="Button" parent="MainScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SAIR"

[node name="PlayScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PlayScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayScreen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PlayScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Modo de Jogo"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="PlayScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VSPlayer2Button" type="Button" parent="PlayScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "VS. Player 2"

[node name="VSCPUButton" type="Button" parent="PlayScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "VS. CPU"

[node name="PlayBackButton" type="Button" parent="PlayScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Voltar"

[node name="CPUScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CPUScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CPUScreen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CPUScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Escolha o CPU"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="CPUScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BasicButton" type="Button" parent="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Básico"

[node name="AggressiveButton" type="Button" parent="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Agressivo"

[node name="DeceiverButton" type="Button" parent="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enganador"

[node name="CPUBackButton" type="Button" parent="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Voltar"

[connection signal="pressed" from="MainScreen/CenterContainer/VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainScreen/CenterContainer/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PlayScreen/CenterContainer/VBoxContainer/ButtonsContainer/VSPlayer2Button" to="." method="_on_vs_player2_pressed"]
[connection signal="pressed" from="PlayScreen/CenterContainer/VBoxContainer/ButtonsContainer/VSCPUButton" to="." method="_on_vs_cpu_pressed"]
[connection signal="pressed" from="PlayScreen/CenterContainer/VBoxContainer/ButtonsContainer/PlayBackButton" to="." method="_on_play_back_pressed"]
[connection signal="pressed" from="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer/BasicButton" to="." method="_on_basic_pressed"]
[connection signal="pressed" from="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer/AggressiveButton" to="." method="_on_aggressive_pressed"]
[connection signal="pressed" from="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer/DeceiverButton" to="." method="_on_deceiver_pressed"]
[connection signal="pressed" from="CPUScreen/CenterContainer/VBoxContainer/ButtonsContainer/CPUBackButton" to="." method="_on_cpu_back_pressed"]
